k8s-advanced/kubernetes/overlays/prod/networkpolicy-patch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: slack-metrics-api-netpol
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: slack-metrics-prod
        - namespaceSelector:
            matchLabels:
              name: istio-system
      ports:
        - protocol: TCP
          port: 8080
